add_subdirectory(proj_test)
add_subdirectory(dvbs2_mod)
add_subdirectory(nat2pro)
add_subdirectory(msugs_correct)
add_subdirectory(sdr_probe)
add_subdirectory(apply_mapoverlay)
add_subdirectory(cbor2json)
add_subdirectory(test_satdump)
add_subdirectory(imager_simulator)
add_subdirectory(stereo_merger)
add_subdirectory(cadu_rs_derand)
add_subdirectory(block_bench)